--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "commander": "^2.19.0",
     "cron": "^1.4.1",
     "debug": "^4.1.0",
-    "fs-extra": "^7.0.0"
+    "fs-extra": "^7.0.0",
+    "resolve": "^1.10.0"
   }
 }
